--- a/material-sensel/partials/header.html
+++ b/material-sensel/partials/header.html
@@ -1,10 +1,14 @@
-<header class="md-header">
+<header class="md-header" data-md-component="header">
   <nav class="md-header-nav md-grid">
     <div class="md-flex">
       <div class="md-flex__cell md-flex__cell--shrink">
-        {% if config.extra.logo %}
+        {% if config.extra.logo_home %}
+          <a href="{{ config.extra.org_url }}" title="{{ config.site_name }}" class="md-logo md-header-nav__button">
+            <img src="{{ base_url }}/{{ config.extra.logo }}" width="103" height="24">
+          </a>
+        {% elif config.extra.logo %}
           <a href="{{ nav.homepage.url }}" title="{{ config.site_name }}" class="md-logo md-header-nav__button">
-            <img src="{{ base_url }}/{{ config.extra.logo }}" width="24" height="24">
+            <img src="{{ base_url }}/{{ config.extra.logo }}" width="103" height="24">
           </a>
         {% else %}
           <a href="{{ nav.homepage.url }}" title="{{ config.site_name }}" class="md-icon md-icon--home md-header-nav__button">
