--- a/material-sensel/partials/footer.html
+++ b/material-sensel/partials/footer.html
@@ -1,82 +1,83 @@
+{% import "partials/language.html" as lang %}
 <footer class="footer md-footer">
   <div class="container footer-links">
     <div class="row">
       <div class="col-xs-12 col-sm-2 padding-bottom-20">
         <nav class="md-footer-nav__inner md-grid">
-          <a href="{{ nav.homepage.url }}" title="{{ config.site_name }}" class="md-logo md-header-nav__button">
+          <a href="{{ config.extra.org_url }}" title="{{ config.site_name }}" class="md-logo md-header-nav__button">
             <img src="{{ base_url }}/{{ config.extra.logoalt }}" width="103" height="24">
           </a>
         </nav>
       </div>
       <div class="col-xs-6 col-sm-2">
         <ul>
-          <a href="/node/21">
+          <a href="{{ config.extra.org_url }}node/21">
             <li><strong>About</strong></li>
           </a>
-          <a href="/node/21#about-intro">
+          <a href="{{ config.extra.org_url }}node/21#about-intro">
             <li>Core Technology</li>
           </a>
-          <a href="/node/21#team">
+          <a href="{{ config.extra.org_url }}node/21#team">
             <li>The Team</li>
           </a>
-          <a href="/node/21#bottom-cta">
+          <a href="{{ config.extra.org_url }}node/21#bottom-cta">
             <li>Contact</li>
           </a>
         </ul>
       </div>
       <div class="col-xs-6 col-sm-2">
         <ul>
-          <a href="/node/1">
+          <a href="{{ config.extra.org_url }}node/1">
             <li><strong>Support</strong></li>
           </a>
-          <a href="/node/1#support-intro">
+          <a href="{{ config.extra.org_url }}node/1#support-intro">
             <li>Getting Started</li>
           </a>
-          <a href="/node/1#support-faq">
+          <a href="{{ config.extra.org_url }}node/1#support-faq">
             <li>FAQ</li>
           </a>
-          <a href="/node/1#software">
+          <a href="{{ config.extra.org_url }}node/1#software">
             <li>Software Support</li>
           </a>
-          <a href="/node/1#hacking-support">
+          <a href="{{ config.extra.org_url }}node/1#hacking-support">
             <li>Hacking Support</li>
           </a>
         </ul>
       </div>
       <div class="col-xs-6 col-sm-2">
         <ul>
-          <a href="/art">
+          <a href="{{ config.extra.org_url }}art">
             <li><strong>Art</strong></li>
           </a>
-          <a href="/music">
+          <a href="{{ config.extra.org_url }}music">
             <li><strong>Music</strong></li>
           </a>
-          <a href="/gaming">
+          <a href="{{ config.extra.org_url }}gaming">
             <li><strong>Gaming</strong></li>
           </a>
-          <a href="/hacking">
+          <a href="{{ config.extra.org_url }}hacking">
             <li><strong>Hacking</strong></li>
           </a>
-          <a href="/media">
+          <a href="{{ config.extra.org_url }}media">
             <li><strong>Media</strong></li>
           </a>
-          <a href="/productivity">
+          <a href="{{ config.extra.org_url }}productivity">
             <li><strong>Productivity</strong></li>
           </a>
         </ul>
       </div>
       <div class="col-xs-6 col-sm-2">
         <ul>
-          <a href="/about#contact">
+          <a href="{{ config.extra.org_url }}about#contact">
             <li><strong>Contact</strong></li>
           </a>
-          <a href="/warranty">
+          <a href="{{ config.extra.org_url }}warranty">
             <li><strong>Warranty</strong></li>
           </a>
-          <a href="/sensel-privacy-policy">
+          <a href="{{ config.extra.org_url }}sensel-privacy-policy">
             <li><strong>Privacy Policy</strong></li>
           </a>
-          <a href="/#press">
+          <a href="{{ config.extra.org_url }}#press">
             <li><strong>Press</strong></li>
           </a>
         </ul>
@@ -88,7 +89,7 @@
       </div>
     </div>
   </div>
-  <div class="footer-anchor">
+  <div>
     <div class="container">
       {% if config.copyright %}
         <div class="md-footer-copyright__highlight">
