--- a/docs/senselcss/MyFontsWebfontsKit.css
+++ b/docs/senselcss/MyFontsWebfontsKit.css
@@ -59,33 +59,33 @@
 
 @font-face {
 	font-family: 'Arboria';
-	src: url('webfonts/33193C_1_0.eot');
-	src: url('webfonts/33193C_1_0.eot?#iefix') format('embedded-opentype'),
-		url('webfonts/33193C_1_0.woff2') format('woff2'),
-		url('webfonts/33193C_1_0.woff') format('woff'),
-		url('webfonts/33193C_1_0.ttf') format('truetype');
+	src: url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_1_0.eot');
+	src: url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_1_0.eot?#iefix') format('embedded-opentype'),
+		url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_1_0.woff2') format('woff2'),
+		url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_1_0.woff') format('woff'),
+		url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_1_0.ttf') format('truetype');
 		font-weight: 500;
 		font-style: normal;
 }
 
 @font-face {
 	font-family: 'Arboria';
-	src: url('webfonts/33193C_2_0.eot');
-	src: url('webfonts/33193C_2_0.eot?#iefix') format('embedded-opentype'),
-	url('webfonts/33193C_2_0.woff2') format('woff2'),
-	url('webfonts/33193C_2_0.woff') format('woff'),
-	url('webfonts/33193C_2_0.ttf') format('truetype');
+	src: url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_2_0.eot');
+	src: url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_2_0.eot?#iefix') format('embedded-opentype'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_2_0.woff2') format('woff2'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_2_0.woff') format('woff'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_2_0.ttf') format('truetype');
 	font-weight: 300;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Arboria';
-	src: url('webfonts/33193C_3_0.eot');
-	src: url('webfonts/33193C_3_0.eot?#iefix') format('embedded-opentype'),
-	url('webfonts/33193C_3_0.woff2') format('woff2'),
-	url('webfonts/33193C_3_0.woff') format('woff'),
-	url('webfonts/33193C_3_0.ttf') format('truetype');
+	src: url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_3_0.eot');
+	src: url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_3_0.eot?#iefix') format('embedded-opentype'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_3_0.woff2') format('woff2'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_3_0.woff') format('woff'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_3_0.ttf') format('truetype');
 	font-weight: 500;
 	font-style: italic;
 }
@@ -93,11 +93,11 @@
 /*
 @font-face {
 	font-family: 'Arboria';
-	src: url('webfonts/33193C_7_0.eot');
-	src: url('webfonts/33193C_7_0.eot?#iefix') format('embedded-opentype'),
-	url('webfonts/33193C_7_0.woff2') format('woff2'),
-	url('webfonts/33193C_7_0.woff') format('woff'),
-	url('webfonts/33193C_7_0.ttf') format('truetype');
+	src: url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_7_0.eot');
+	src: url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_7_0.eot?#iefix') format('embedded-opentype'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_7_0.woff2') format('woff2'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_7_0.woff') format('woff'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_7_0.ttf') format('truetype');
 		font-weight: 700;
 		font-style: normal;
 }
@@ -105,33 +105,33 @@
 
 @font-face {
 	font-family: 'Arboria';
-	src: url('webfonts/33193C_8_0.eot');
-	src: url('webfonts/33193C_8_0.eot?#iefix') format('embedded-opentype'),
-	url('webfonts/33193C_8_0.woff2') format('woff2'),
-	url('webfonts/33193C_8_0.woff') format('woff'),
-	url('webfonts/33193C_8_0.ttf') format('truetype');
+	src: url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_8_0.eot');
+	src: url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_8_0.eot?#iefix') format('embedded-opentype'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_8_0.woff2') format('woff2'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_8_0.woff') format('woff'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_8_0.ttf') format('truetype');
 		font-weight: 700;
 		font-style: italic;}
  */
 
 @font-face {
 	font-family: 'Arboria';
-	src: url('webfonts/33193C_A_0.eot');
-	src: url('webfonts/33193C_A_0.eot?#iefix') format('embedded-opentype'),
-	url('webfonts/33193C_A_0.woff2') format('woff2'),
-	url('webfonts/33193C_A_0.woff') format('woff'),
-	url('webfonts/33193C_A_0.ttf') format('truetype');
+	src: url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_A_0.eot');
+	src: url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_A_0.eot?#iefix') format('embedded-opentype'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_A_0.woff2') format('woff2'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_A_0.woff') format('woff'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_A_0.ttf') format('truetype');
 	font-weight: 300;
 	font-style: italic;
 }
 
 @font-face {
 	font-family: 'Arboria';
-	src: url('webfonts/33193C_9_0.eot');
-	src: url('webfonts/33193C_9_0.eot?#iefix') format('embedded-opentype'),
-	url('webfonts/33193C_9_0.woff2') format('woff2'),
-	url('webfonts/33193C_9_0.woff') format('woff'),
-	url('webfonts/33193C_9_0.ttf') format('truetype');
+	src: url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_9_0.eot');
+	src: url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_9_0.eot?#iefix') format('embedded-opentype'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_9_0.woff2') format('woff2'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_9_0.woff') format('woff'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_9_0.ttf') format('truetype');
 	font-weight: 400;
 	font-style: normal;
 }
@@ -139,11 +139,11 @@
 
 @font-face {
 	font-family: 'Arboria';
-	src: url('webfonts/33193C_B_0.eot');
-	src: url('webfonts/33193C_B_0.eot?#iefix') format('embedded-opentype'),
-	url('webfonts/33193C_B_0.woff2') format('woff2'),
-	url('webfonts/33193C_B_0.woff') format('woff'),
-	url('webfonts/33193C_B_0.ttf') format('truetype');
+	src: url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_B_0.eot');
+	src: url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_B_0.eot?#iefix') format('embedded-opentype'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_B_0.woff2') format('woff2'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_B_0.woff') format('woff'),
+	url('http://sensel.com/sites/default/themes/sensel/css/webfonts/33193C_B_0.ttf') format('truetype');
 	font-weight: 400;
 	font-style: italic;
 }
