--- a/material-sensel/partials/nav.html
+++ b/material-sensel/partials/nav.html
@@ -2,7 +2,9 @@
   <label class="md-nav__title md-nav__title--site" for="drawer">
     {% if config.extra.logo %}
       <i class="md-logo md-nav__button">
-        <img src="{{ base_url }}/{{ config.extra.logo }}">
+        <a href="{{ config.extra.org_url }}" title="{{ config.extra.back_home }}" class="homelink" target="_blank">
+          <img src="{{ base_url }}/{{ config.extra.logo }}">
+        </a>
       </i>
     {% else %}
       <i class="md-icon md-icon--home md-nav__button"></i>
