--- a/sensel-theme_gen/src/partials/footer.html
+++ b/sensel-theme_gen/src/partials/footer.html
@@ -1,104 +1,120 @@
-<!--
-  Copyright (c) 2016-2017 Martin Donath <martin.donath@squidfunk.com>
-
-  Permission is hereby granted, free of charge, to any person obtaining a copy
-  of this software and associated documentation files (the "Software"), to
-  deal in the Software without restriction, including without limitation the
-  rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
-  sell copies of the Software, and to permit persons to whom the Software is
-  furnished to do so, subject to the following conditions:
-
-  The above copyright notice and this permission notice shall be included in
-  all copies or substantial portions of the Software.
-
-  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-  FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
-  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
-  FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
-  IN THE SOFTWARE.
--->
-
 {% import "partials/language.html" as lang %}
 
 <!-- Application footer -->
-<footer class="md-footer">
+<footer class="footer md-footer">
 
-  <!-- Link to previous and/or next page -->
-  {% if page.previous_page or page.next_page %}
-    <div class="md-footer-nav">
-      <nav class="md-footer-nav__inner md-grid">
+  <!-- Sensel footer nav -->
+  <div class="container footer-links">
+    <div class="row">
+      <div class="col-xs-12 col-sm-2 padding-bottom-20">
 
-        <!-- Link to previous page -->
-        {% if page.previous_page %}
-          <a href="{{ page.previous_page.url }}"
-              title="{{ page.previous_page.title }}"
-              class="md-flex md-footer-nav__link md-footer-nav__link--prev"
-              rel="prev">
-            <div class="md-flex__cell md-flex__cell--shrink">
-              <i class="md-icon md-icon--arrow-back
-                    md-footer-nav__button"></i>
-            </div>
-            <div class="md-flex__cell md-flex__cell--stretch
-                  md-footer-nav__title">
-              <span class="md-flex__ellipsis">
-                <span class="md-footer-nav__direction">
-                  {{ lang.t('footer.previous') }}
-                </span>
-                {{ page.previous_page.title }}
-              </span>
-            </div>
+        <!-- Sensel logo links to www.sensel.com -->
+        <nav class="md-footer-nav__inner md-grid">
+          <a href="{{ config.extra.org_url }}" title="{{ config.site_name }}" class="md-logo md-header-nav__button">
+            <img src="{{ base_url }}/{{ config.extra.logoalt }}" width="103" height="24">
           </a>
-        {% endif %}
-
-        <!-- Link to next page -->
-        {% if page.next_page %}
-          <a href="{{ page.next_page.url }}" title="{{ page.next_page.title }}"
-              class="md-flex md-footer-nav__link md-footer-nav__link--next"
-              rel="next">
-            <div class="md-flex__cell md-flex__cell--stretch
-                  md-footer-nav__title">
-              <span class="md-flex__ellipsis">
-                <span class="md-footer-nav__direction">
-                  {{ lang.t('footer.next') }}
-                </span>
-                {{ page.next_page.title }}
-              </span>
-            </div>
-            <div class="md-flex__cell md-flex__cell--shrink">
-              <i class="md-icon md-icon--arrow-forward
-                    md-footer-nav__button"></i>
-            </div>
-          </a>
-        {% endif %}
-      </nav>
-    </div>
-  {% endif %}
-
-  <!-- Further information -->
-  <div class="md-footer-meta md-typeset">
-    <div class="md-footer-meta__inner md-grid">
-
-      <!-- Copyright and theme information -->
-      <div class="md-footer-copyright">
-        {% if config.copyright %}
-          <div class="md-footer-copyright__highlight">
-            {{ config.copyright }}
-          </div>
-        {% endif %}
-        powered by
-        <a href="http://www.mkdocs.org" title="MkDocs">MkDocs</a>
-        and
-        <a href="http://squidfunk.github.io/mkdocs-material/"
-            title="Material for MkDocs">
-          Material for MkDocs</a>
+        </nav>
       </div>
 
-      <!-- Social links -->
-      {% block social %}
-        {% include "partials/social.html" %}
-      {% endblock %}
+      <!-- Sensel Nav column: About -->
+      <div class="col-xs-6 col-sm-2">
+        <ul>
+          <a href="{{ config.extra.org_url }}node/21">
+            <li><strong>About</strong></li>
+          </a>
+          <a href="{{ config.extra.org_url }}node/21#about-intro">
+            <li>Core Technology</li>
+          </a>
+          <a href="{{ config.extra.org_url }}node/21#team">
+            <li>The Team</li>
+          </a>
+          <a href="{{ config.extra.org_url }}node/21#bottom-cta">
+            <li>Contact</li>
+          </a>
+        </ul>
+      </div>
+
+      <!-- Sensel Nav column: Support -->
+      <div class="col-xs-6 col-sm-2">
+        <ul>
+          <a href="{{ config.extra.org_url }}node/1">
+            <li><strong>Support</strong></li>
+          </a>
+          <a href="{{ config.extra.org_url }}node/1#support-intro">
+            <li>Getting Started</li>
+          </a>
+          <a href="{{ config.extra.org_url }}node/1#support-faq">
+            <li>FAQ</li>
+          </a>
+          <a href="{{ config.extra.org_url }}node/1#software">
+            <li>Software Support</li>
+          </a>
+          <a href="{{ config.extra.org_url }}node/1#hacking-support">
+            <li>Hacking Support</li>
+          </a>
+        </ul>
+      </div>
+
+      <!-- Sensel Nav column: Modes-->
+      <div class="col-xs-6 col-sm-2">
+        <ul>
+          <a href="{{ config.extra.org_url }}art">
+            <li><strong>Art</strong></li>
+          </a>
+          <a href="{{ config.extra.org_url }}music">
+            <li><strong>Music</strong></li>
+          </a>
+          <a href="{{ config.extra.org_url }}gaming">
+            <li><strong>Gaming</strong></li>
+          </a>
+          <a href="{{ config.extra.org_url }}hacking">
+            <li><strong>Hacking</strong></li>
+          </a>
+          <a href="{{ config.extra.org_url }}media">
+            <li><strong>Media</strong></li>
+          </a>
+          <a href="{{ config.extra.org_url }}productivity">
+            <li><strong>Productivity</strong></li>
+          </a>
+        </ul>
+      </div>
+
+      <!-- Sensel Nav column: Contact -->
+      <div class="col-xs-6 col-sm-2">
+        <ul>
+          <a href="{{ config.extra.org_url }}about#contact">
+            <li><strong>Contact</strong></li>
+          </a>
+          <a href="{{ config.extra.org_url }}warranty">
+            <li><strong>Warranty</strong></li>
+          </a>
+          <a href="{{ config.extra.org_url }}sensel-privacy-policy">
+            <li><strong>Privacy Policy</strong></li>
+          </a>
+          <a href="{{ config.extra.org_url }}#press">
+            <li><strong>Press</strong></li>
+          </a>
+        </ul>
+      </div>
+
+      <!-- Sensel Nav column: Social links-->
+      <div class="col-xs-6 col-sm-2">
+        {% block social %}
+          {% include "partials/social.html" %}
+        {% endblock %}
+      </div>
+    </div>
+  </div>
+
+  <!-- Further information -->
+  <div>
+    <!-- Copyright information -->
+    <div class="container">
+      {% if config.copyright %}
+        <div class="md-footer-copyright__highlight">
+          {{ config.copyright }}
+        </div>
+      {% endif %}
     </div>
   </div>
 </footer>
