--- a/sensel-theme_gen/material/partials/nav.html
+++ b/sensel-theme_gen/material/partials/nav.html
@@ -2,7 +2,7 @@
   <label class="md-nav__title md-nav__title--site" for="drawer">
     {% if config.extra.logo %}
       <i class="md-logo md-nav__button">
-        <a href="{{ config.extra.org_url }}" title="{{ config.extra.back_home }}" class="homelink" target="_blank">
+        <a href="{{ config.extra.org_url }}" title="{{ config.extra.back_home }}" target="_blank">
           <img src="{{ base_url }}/{{ config.extra.logo }}">
         </a>
       </i>
