--- a/sensel-theme_gen/src/partials/header.html
+++ b/sensel-theme_gen/src/partials/header.html
@@ -30,8 +30,7 @@
       <!-- Link to home -->
       <div class="md-flex__cell md-flex__cell--shrink">
         {% if config.extra.logo_home %}
-          <a href="{{ config.extra.org_url }}" title="{{ config.site_name }}"
-              class="md-logo md-header-nav__button">
+          <a href="{{ config.extra.org_url }}" title="{{ config.extra.back_home }}" class="md-logo md-header-nav__button" target="_blank">
             <img src="{{ base_url }}/{{ config.extra.logo }}"
                  width="103"  height="24" />
           </a>
