--- a/material-sensel/partials/footer.html
+++ b/material-sensel/partials/footer.html
@@ -11,58 +11,31 @@
       </div>
       <div class="col-xs-6 col-sm-2">
         <ul>
-          <a href="{{ config.extra.org_url }}node/21">
-            <li><strong>About</strong></li>
-          </a>
-          <a href="{{ config.extra.org_url }}node/21#about-intro">
+          <a href="{{ config.extra.org_url }}">
             <li>Core Technology</li>
           </a>
-          <a href="{{ config.extra.org_url }}node/21#team">
-            <li>The Team</li>
+          <a href="{{ config.extra.about_url }}">
+            <li>About</li>
           </a>
-          <a href="{{ config.extra.org_url }}node/21#bottom-cta">
+          <a href="{{ config.extra.about_contact_url }}">
             <li>Contact</li>
           </a>
         </ul>
       </div>
+      
       <div class="col-xs-6 col-sm-2">
         <ul>
-          <a href="{{ config.extra.org_url }}node/1">
-            <li><strong>Support</strong></li>
+          <a href="{{ config.extra.forum_url }}">
+            <li><strong>Forum</strong></li>
           </a>
-          <a href="{{ config.extra.org_url }}node/1#support-intro">
+          <a href="{{ config.extra.quickstart_url }}">
             <li>Getting Started</li>
           </a>
-          <a href="{{ config.extra.org_url }}node/1#support-faq">
+          <a href="{{ config.extra.faq_url }}">
             <li>FAQ</li>
           </a>
-          <a href="{{ config.extra.org_url }}node/1#software">
+          <a href="{{ config.extra.ticket_url }}">
             <li>Software Support</li>
-          </a>
-          <a href="{{ config.extra.org_url }}node/1#hacking-support">
-            <li>Hacking Support</li>
-          </a>
-        </ul>
-      </div>
-      <div class="col-xs-6 col-sm-2">
-        <ul>
-          <a href="{{ config.extra.org_url }}art">
-            <li><strong>Art</strong></li>
-          </a>
-          <a href="{{ config.extra.org_url }}music">
-            <li><strong>Music</strong></li>
-          </a>
-          <a href="{{ config.extra.org_url }}gaming">
-            <li><strong>Gaming</strong></li>
-          </a>
-          <a href="{{ config.extra.org_url }}hacking">
-            <li><strong>Hacking</strong></li>
-          </a>
-          <a href="{{ config.extra.org_url }}media">
-            <li><strong>Media</strong></li>
-          </a>
-          <a href="{{ config.extra.org_url }}productivity">
-            <li><strong>Productivity</strong></li>
           </a>
         </ul>
       </div>
