--- a/overrides/partials/social.html
+++ b/overrides/partials/social.html
@@ -9,6 +9,14 @@
         {% set _,url = social.link.split("//") %}
         {% set title = url.split("/")[0] %}
       {% endif %}
+
+      {% if social.label %}
+      <span class="senselhome">
+          <a href="{{ social.link }}" target="_blank" rel="noopener" title="{{ title | e }}" class="senselhome">
+            {{ social.label }}
+          </a>
+      </span>
+      {% endif %}
       <a href="{{ social.link }}" target="_blank" rel="noopener" title="{{ title | e }}" class="md-footer-social__link">
         {% include ".icons/" ~ social.icon ~ ".svg" %}
       </a>
